--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -3,13 +3,13 @@
   <%- include('../partials/header'); %>
   <body>
     <div class="container">
-      <div class="constrained-full-height">
+      <div class="constrained-full-height" id="page-login">
         <div class="text-center pt-5">
           <img src="/assets/logo.png" alt="" /><br /><br />
           <h1>Welcome to Food Rescue!</h1>
         </div>
 
-        <form id="login-form" class="mt-5" method="POST" action="/users/login">
+        <form id="login-form" class="mt-5" method="POST" action="/login">
           <ul class="error-msgs"></ul>
 
           <div class="row mb-3 justify-center">
@@ -32,7 +32,6 @@
         </form>
       </div>
     </div>
-
     <%- include('../partials/footer'); %>
   </body>
 </html>
