--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,6 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
     crossorigin="anonymous"
   />
-  <link href="/style.css" rel="stylesheet" />
+  <link href="/styles/style.css" rel="stylesheet" />
   <title>Food Rescue</title>
 </head>
