added location for users

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -29,7 +29,7 @@
           <div class="success-msg"></div>
 
           <div class="mb-3 text-center">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <input type="submit" value = "Login" class="btn btn-primary"></input>
             <br /><br />
             <a href="/signup">Create new account</a>
           </div>
