--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -13,7 +13,7 @@
         <form id="signup-form" class="mt-5" method="POST" action="/signup">
           <div class="error-msgs">
             <%if (errorMsg){%>
-            <p><%=errorMsg%>. Please try again.</p>
+            <p><%=errorMsg%></p>
             <%}%>
           </div>
 
@@ -42,32 +42,65 @@
             />
           </div>
 
-          <div class="mb-3 justify-center" style="display:none">
+          <div class="mb-3 justify-center" style="display: none">
             <label for="location" class="form-label ps-0">Location</label>
             <input type="text" class="form-control location-input" id="location" name="location" />
           </div>
 
           <div class="mb-3 justify-center">
             <p>We use your location to show you listings that are available nearby</p>
-            <input
-              type="button"
-              class="btn btn-primary"
-              value="Find current location"
-              onClick="getLocationLeaflet()"
-            />
+            <a
+              style="cursor: pointer; color: blue; text-decoration: underline"
+              data-bs-toggle="modal"
+              data-bs-target="#map-modal"
+              >Click here to set your location</a
+            >
           </div>
+          <div
+            class="modal fade"
+            id="map-modal"
+            tabindex="-1"
+            style="display: none"
+            aria-labelledby="map-modal-label"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-xl">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Set location</h5>
 
-          <div class="mb-3 text-center" id="map"></div>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="mb-3 text-center" id="map"></div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" onClick="getLocationLeaflet()">
+                    Find current location
+                  </button>
+                  <button type="button" class="btn btn-success" data-bs-dismiss="modal">
+                    Save
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="success-msg"></div>
 
           <div class="mb-3 text-center">
-            <input type="submit" value = "Sign up" class="btn btn-primary"></input>
+            <input type="submit" value="Sign up" class="btn btn-primary" /><br /><br />
+            <a href="/login">Login</a>
           </div>
         </form>
       </div>
     </div>
     <%- include('../partials/footer'); %>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
