--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
   <%- include('../partials/header'); %>
   <body>
-    <div class="container">
-      <div class="constrained-full-height" id="page-login">
+    <div class="constrained-full-height" id="page-login">
+      <div class="container">
         <div class="text-center pt-5">
           <img src="/assets/logo.png" alt="" /><br /><br />
           <h1>Welcome to Food Rescue!</h1>
@@ -29,7 +29,7 @@
           <div class="success-msg"></div>
 
           <div class="mb-3 text-center">
-            <input type="submit" value = "Login" class="btn btn-primary"></input>
+            <input type="submit" value="Login" class="btn btn-primary" />
             <br /><br />
             <a href="/signup">Create new account</a>
           </div>
