--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -8,27 +8,31 @@
       <div class="container">
         <h1>Create a new listing</h1>
         <form method="POST" action="/listings/" enctype="multipart/form-data">
-          <div class="error-msgs">
-            <%if (errorMsg){%>
-            <p><%=errorMsg%></p>
-            <%}%>
-          </div>
+          <%- include('../partials/errors'); %>
 
           <!-- prompt user to upload image -->
           <div class="mb-3 justify-center">
-            <label for="listing-image" class="form-label ps-0">Upload Listing Image</label>
+            <label for="listing_image" class="form-label ps-0">Upload Listing Image</label>
             <input
               type="file"
               class="form-control"
-              id="listing-image"
-              name="listing-image"
+              id="listing_image"
+              name="listing_image"
+              required
             />
           </div>
 
-          <!-- prompt user about pickup location -->
+          <!-- prompt user about pickup location (set it to be sign up location for now) -->
+
           <div class="mb-3 justify-center">
-            <label for="listing-name" class="form-label ps-0">Listing name</label>
-            <input type="text" class="form-control" id="listing-name" name="listing-name" />
+            <label for="listing_name" class="form-label ps-0">Listing name</label>
+            <input
+              type="text"
+              class="form-control"
+              id="listing_name"
+              name="listing_name"
+              required
+            />
           </div>
 
           <div class="mb-3 justify-center">
@@ -38,14 +42,15 @@
           </div>
 
           <div class="mb-3 justify-center">
-            <label for="pick-up-days-and-times" class="form-label ps-0"
+            <label for="pick_up_days_and_times" class="form-label ps-0"
               >Pick up days and times</label
             >
             <input
               type="text"
               class="form-control"
-              id="pick-up-days-and-times"
-              name="pick-up-days-and-times"
+              id="pick_up_days_and_times"
+              name="pick_up_days_and_times"
+              required
             />
           </div>
 
@@ -57,6 +62,7 @@
               list="categoryOptions"
               id="category"
               name="category"
+              required
             />
             <datalist id="categoryOptions">
               <option value="Rice and Noodles"></option>
@@ -65,13 +71,14 @@
           </div>
 
           <div class="mb-3 justify-center">
-            <label for="expiry-date" class="form-label ps-0">Expiry Date</label>
+            <label for="expiry_date" class="form-label ps-0">Expiry Date</label>
             <input
               type="date"
               value="<%=new Date().toISOString().slice(0, 10)%>"
               class="form-control"
-              id="expiry-date"
-              name="expiry-date"
+              id="expiry_date"
+              name="expiry_date"
+              required
             />
           </div>
           <div class="mb-3 text-center">
