--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -10,20 +10,16 @@
         </div>
 
         <form id="login-form" class="mt-5" method="POST" action="/login">
-          <div class="error-msgs">
-            <%if (errorMsg){%>
-            <p><%=errorMsg%></p>
-            <%}%>
-          </div>
+          <%- include('../partials/errors'); %>
 
           <div class="mb-3 justify-center">
             <label for="username" class="form-label ps-0">Username</label>
-            <input type="text" class="form-control" id="username" name="username" />
+            <input type="text" class="form-control" id="username" name="username" required />
           </div>
 
           <div class="mb-3 justify-center">
             <label for="password" class="form-label ps-0">Password</label>
-            <input type="password" class="form-control" id="password" name="password" />
+            <input type="password" class="form-control" id="password" name="password" required />
           </div>
 
           <div class="success-msg"></div>
