--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -11,25 +11,21 @@
         </div>
 
         <form id="signup-form" class="mt-5" method="POST" action="/signup">
-          <div class="error-msgs">
-            <%if (errorMsg){%>
-            <p><%=errorMsg%></p>
-            <%}%>
-          </div>
+          <%- include('../partials/errors'); %>
 
           <div class="mb-3 justify-center">
             <label for="username" class="form-label ps-0">Email</label>
-            <input type="email" class="form-control" id="email" name="email" />
+            <input type="email" class="form-control" id="email" name="email" required />
           </div>
 
           <div class="mb-3 justify-center">
             <label for="username" class="form-label ps-0">Username</label>
-            <input type="text" class="form-control" id="username" name="username" />
+            <input type="text" class="form-control" id="username" name="username" required />
           </div>
 
           <div class="mb-3 justify-center">
             <label for="password" class="form-label ps-0">Password</label>
-            <input type="password" class="form-control" id="password" name="password" />
+            <input type="password" class="form-control" id="password" name="password" required />
           </div>
 
           <div class="mb-3 justify-center">
@@ -39,6 +35,7 @@
               class="form-control"
               id="confirm_password"
               name="confirm_password"
+              required
             />
           </div>
 
