--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -18,7 +18,6 @@
               class="form-control"
               id="listing_image"
               name="listing_image"
-              required
             />
           </div>
 
@@ -62,11 +61,18 @@
               list="categoryOptions"
               id="category"
               name="category"
+              autocomplete="off"
               required
             />
             <datalist id="categoryOptions">
               <option value="Rice and Noodles"></option>
               <option value="Bread and Pastry"></option>
+              <option value="Snacks"></option>
+              <option value="Fresh Produce"></option>
+              <option value="Condiments"></option>
+              <option value="Canned Food"></option>
+              <option value="Beverage"></option>
+              <option value="Chilled and Frozen Food"></option>
             </datalist>
           </div>
 
