--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -47,8 +47,21 @@
               required
             />
           </div>
-
           <div class="mb-3 justify-center">
+            <label for="category" class="form-label ps-0">Category</label>
+            <select name="category" id="categoryOptions">
+              <option value="rice-and-noodles">Rice and noodles</option>
+              <option value="bread-and-pastry">Bread and pastry</option>
+              <option value="snacks">Snacks</option>
+              <option value="fresh-produce">Fresh produce</option>
+              <option value="condiments">Condiments</option>
+              <option value="canned-food">Canned food</option>
+              <option value="beverage">Beverage</option>
+              <option value="chilled-and-frozen-food">Chilled and frozen food</option>
+            </select>
+          </div>
+
+          <!-- <div class="mb-3 justify-center">
             <label for="category" class="form-label ps-0">Category</label>
             <input
               type="text"
@@ -69,7 +82,7 @@
               <option value="Beverage"></option>
               <option value="Chilled and Frozen Food"></option>
             </datalist>
-          </div>
+          </div> -->
 
           <div class="mb-3 justify-center">
             <label for="expiry_date" class="form-label ps-0">Expiry Date</label>
