--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -35,17 +35,13 @@
           <div class="mt-3 expiry-status">
             <h6>Expiry Status:</h6>
             <div class="form-check form-check-inline">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                name="not-expired"
-                id="not-expired"
-                checked
-              />
+              <input class="form-check-input <%=formInputs.expiry["not-expired"]%>" type="checkbox"
+              name="not-expired" id="not-expired" checked />
               <label class="form-check-label" for="not-expired">Not expired</label>
             </div>
             <div class="form-check form-check-inline">
-              <input class="form-check-input" type="checkbox" name="expired" id="expired" checked />
+              <input class="form-check-input <%=formInputs.expiry["expired"]%>" type="checkbox"
+              name="expired" id="expired" checked />
               <label class="form-check-label" for="expired">Expired</label>
             </div>
           </div>
