--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -98,6 +98,6 @@
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
       crossorigin=""
     ></script>
-    <script src="/scripts/map.js"></script>
+    <script src="/scripts/map_signup.js"></script>
   </body>
 </html>
