--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -113,6 +113,6 @@
       </div>
     </div>
     <%- include('../partials/footer'); %>
-    <script src="/scripts/filters.js"></script>
+    <script src="/scripts/filters_input.js"></script>
   </body>
 </html>
