--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="">Profile</a>
+          <a class="nav-link" href="/users">Profile</a>
         </li>
         <li class="nav-item">
           <form method="POST" action="/logout?_method=DELETE">
