--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -65,6 +65,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title">Set location</h5>
+                  <div id="api-key" style="display: none"><%=apiKey%></div>
 
                   <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
@@ -98,6 +99,9 @@
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
       crossorigin=""
     ></script>
+    <!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet"></script>
+    <script src="https://unpkg.com/esri-leaflet-geocoder"></script>
     <script src="/scripts/map_signup.js"></script>
   </body>
 </html>
