--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,11 @@
     integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
     crossorigin=""
   />
+  <!-- Esri Leaflet Geocoder -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/esri-leaflet-geocoder/dist/esri-leaflet-geocoder.css"
+  />
   <link href="/styles/style.css" rel="stylesheet" />
 
   <title>Food Rescue</title>
